<resources>
    <string name="app_name">CarServiceLog</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="engine">Engine</string>
    <string name="trim">Trim</string>
    <string name="color">Color</string>
    <string name="mileage">Mileage</string>
    <string name="registration">Registration</string>
    <string name="horsepower">BHP</string>
    <string name="torque">Torque</string>
    <string name="extra_details">Extra Details</string>
    <string name="optional">(Optional)</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
	<string name="service">Service</string>
    <string name="fuel">Fuel</string>
    <string name="expense">Expense</string>
    <string name="reminder">Reminder</string>
    <string name="action_done">Done</string>
    <string name="location">Location</string>
    <string name="location_input">Enter a location</string>
    <string name="notes">Notes</string>
    <string name="euro_symbol">\u20ac%1$s</string>
    <string name="pound_symbol">\u00a3%1$s</string>
    <string name="usd_symbol">\u0024%1$s</string>
</resources>
